--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,43 @@
 html, body {
   height: 100%;
   margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-size: 35px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+ul {
+    position: absolute;
+    bottom: 470px;
+}
+
+li {
+    color: white;
+    font-size: 18px;
+    padding: 20px;
+    padding-left: 2px;
+}
+
+li:hover {
+    cursor: pointer;
+}
+
+img {
+    filter: invert(100%);
+    padding-right: 5px;
+}
+
+img:hover {
+    cursor: pointer;
 }
 
 .grid-container {
     display: grid;
-    grid-template-rows: .25fr 1fr;
+    grid-template-rows: 200px 50px 850px;
     height: 100vh;
     width: 100%;
     /* background-color: black; */
@@ -17,19 +49,30 @@ html, body {
 
 .top-bar {
   background-color: #333;
+  display: grid;
+  align-items:baseline;
+}
+
+.center {
+    padding-left: 25px; 
+    /* padding-bottom: 20px; */
 }
 
 .mid-section {
     display: grid;
     grid-template-columns: repeat(4, auto);
-    background-color: aliceblue;
+    /* background-color: azure; */
     grid-gap: 20px;
     padding: 20px;
     
 }
 
 .grid-item {
-    background-color:aliceblue;
-    border: 1px solid #333;
-    box-shadow: 10px 10px 8px 2px #888888;
+    /* background-color:aliceblue; */
+    border: 1px  solid rgba(0,0,0, .05);
+    box-shadow: 0 -6px 0 #fff, 0 1px 6px rgba(0,0,0, .35);
+}
+
+.grid-item:hover {
+    cursor: pointer;
 }
