--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,40 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    margin-bottom: 20px;
+    margin-right: 50px;
+    color: white;
+    font-size: 50px;
+}
+
 h2 {
     font-size: 35px;
-    font-weight: bold;
-    margin-top: 15px;
+    margin-top: 40px;
+    cursor:default;
+}
+
+aside {
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    margin-right: 50px;
+    margin-top: 20px;
+    filter: invert(57%) sepia(67%) saturate(869%) hue-rotate(172deg) brightness(82%) contrast(96%);
 }
 
 ul {
     position: absolute;
-    bottom: 470px;
+    margin-top: 100px;
 }
 
 li {
     color: white;
     font-size: 18px;
-    padding: 20px;
+    padding: 40px;
     padding-left: 2px;
 }
 
@@ -32,16 +51,18 @@ li:hover {
 
 img {
     filter: invert(100%);
-    padding-right: 5px;
+    padding-right: 8px;
 }
 
 img:hover {
     cursor: pointer;
 }
 
+
+
 .grid-container {
     display: grid;
-    grid-template-rows: 200px 50px 850px;
+    grid-template-rows: 150px 100px 850px;
     height: 100vh;
     width: 100%;
     /* background-color: black; */
@@ -64,7 +85,6 @@ img:hover {
     /* background-color: azure; */
     grid-gap: 20px;
     padding: 20px;
-    
 }
 
 .grid-item {
@@ -75,4 +95,14 @@ img:hover {
 
 .grid-item:hover {
     cursor: pointer;
+}
+
+.playlists, 
+.personal-videos {
+    color: gray;
+}
+
+.playlists-img, 
+.user-img {
+    filter: invert(57%) sepia(67%) saturate(869%) hue-rotate(172deg) brightness(82%) contrast(96%);
 }
