Wrote html for the text in a box and styled

--- a/normalize.css
+++ b/normalize.css
@@ -38,8 +38,9 @@
    */
   
   h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+    font-size: 3.75em;
+    margin-top: 0.67em;
+    margin-right: .5em;
   }
   
   /* Grouping content
