--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,23 @@
+/* * {
+    box-sizing: border-box;
+} */
+
 html, body {
   height: 100%;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  /* display: grid;
+  grid-template-columns: repeat(1, 1fr); */
 }
 
 h1 {
     display: flex;
     justify-content: flex-end;
-    align-self: flex-end;
+    /* align-self: flex-end; */
     margin-bottom: 20px;
-    margin-right: 50px;
+    padding-right: 30px;
     color: white;
-    font-size: 50px;
+    /* font-size: 500px; */
 }
 
 h1:hover {
@@ -25,36 +31,12 @@ h2 {
     cursor:default;
 }
 
-h3,
-p {
+h3{
     margin: 0;
+    margin-top: 15px;
     margin-left: 20px;
     color:rgba(0,0,0, .55)
 }
-
-
-h3 {
-    margin-top: 15px;
-}
-
-p {
-    color:rgba(0,0,0, .35)
-}
-
-/* p {
-    margin: 0 0 0 20px;
-    object-fit:cover;
-    width: 50%;
-    word-wrap: break-word;
-    border: .5px solid black;
-}
-h4 {
-    object-fit:initial;
-    width: 80%;
-    word-wrap: break-word;
-    border: .5px solid black;
-    
-} */
 
 
 
@@ -72,8 +54,11 @@ aside:hover {
 }
 
 ul {
+    display: flex;
+    align-items: center;
     position: absolute;
-    margin-top: 100px;
+    margin-top: 70px;
+
 }
 
 li {
@@ -88,7 +73,6 @@ li:hover {
 }
 
 img {
-    filter: invert(100%);
     padding-right: 8px;
 }
 
@@ -98,7 +82,7 @@ img:hover {
 
 .grid-container {
     display: grid;
-    grid-template-rows: 150px 100px 850px;
+    grid-template-rows: 170px 100px 850px;
     height: 100vh;
     width: 100%;
 }
@@ -117,7 +101,7 @@ img:hover {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(30vw, 160px);
-    grid-gap: 20px;
+    grid-gap: 12px;
     padding: 20px;
 }
 
@@ -140,9 +124,55 @@ img:hover {
     filter: invert(57%) sepia(67%) saturate(869%) hue-rotate(172deg) brightness(82%) contrast(96%);
 }
 
+.shares-img {
+    filter: invert(100%);
+}
+
 .turtle {
     max-height: 35%;
     width: 100%;
     object-fit: cover;
-  }
+}
+
+.date {
+    margin: 0;
+    margin-left: 20px;
+    color:rgba(0,0,0, .35)
+}
+
+.link {
+    object-fit: cover;
+    margin: 20px 0 0 60px;
+    width: 70%;
+    color:rgba(0,0,0, .35);
+    background-color: rgba(206, 206, 206, 0.6); 
+    word-wrap: break-word;
+}
+
+.box-playlist {
+    margin: 20px 0 0 20px;
+    color:rgba(0,0,0, .55);
+    font-size: 85%;
+}
+
+.box-name-of-playlist {
+    margin-left: 20px;
+    margin-top: 0;
+    color:rgba(0,0,0, .55);
+    font-size: 20px;
+}
+
+.box-attachments {
+    margin: 20px 0 0 20px;
+    color:rgba(0,0,0, .55);
+    font-size: 80%;
+}
+
+.box-number {
+    margin-left: 20px;
+    margin-top: 0;
+    color: rgb(46, 149, 209, .8);
+    font-size: 40px;
+    font-weight: lighter;
+}
 
