--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ img:hover {
 .mid-section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(30vw, 160px);
+    grid-auto-rows: minmax(32vw, 160px);
     grid-gap: 12px;
     padding: 20px;
 }
@@ -142,19 +142,34 @@ img:hover {
     object-fit: cover;
 }
 
+/* .image-views-number {
+    margin-top: 0;
+} */
+
 .date {
     margin: 0;
     margin-left: 20px;
     color:rgba(0,0,0, .35)
 }
 
-.link {
+.link1,
+.link2 {
     object-fit: cover;
-    margin: 20px 0 0 60px;
-    width: 70%;
+    margin: 20px 0 0 30px;
+    padding: 10px;
+    width: 80%;
     color:rgba(0,0,0, .35);
     background-color: rgba(206, 206, 206, 0.6); 
     word-wrap: break-word;
+}
+
+.link1 {
+    padding-bottom: 0;
+}
+
+.link2 {
+    margin-top: 0;
+    padding-top: 0;
 }
 
 .box-playlist {
