--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,20 @@
-/* * {
-    box-sizing: border-box;
-} */
-
 html, body {
-  height: 100%;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  /* display: grid;
-  grid-template-columns: repeat(1, 1fr); */
-}
-
+    height: 100%;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+  
 h1 {
     display: flex;
     justify-content: flex-end;
-    /* align-self: flex-end; */
     margin-bottom: 20px;
-    /* padding-right: 30px; */
-    color: white;
-    /* font-size: 500px; */
+    color: #F8F8FF;
 }
-
+  
 h1:hover {
     cursor: pointer;
 }
-
+  
 h2 {
     font-size: 35px;
     margin-top: 40px;
@@ -33,20 +24,14 @@ h2 {
 }
 
 h3{
-    margin: 0;
-    margin-top: 15px;
-    margin-left: 20px;
+    margin: 15px 0 0 20px;
     color:rgba(0,0,0, .55)
 }
-
-
 
 aside {
     display: flex;
     justify-content: flex-end;
-    align-self: flex-end;
-    margin-right: 40px;
-    margin-top: 20px;
+    margin: 20px 40px 0 0;
     filter: invert(57%) sepia(67%) saturate(869%) hue-rotate(172deg) brightness(82%) contrast(96%);
 }
 
@@ -59,14 +44,12 @@ ul {
     align-items: center;
     position: absolute;
     margin-top: 70px;
-
 }
 
 li {
-    color: white;
+    color: #F8F8FF;
     font-size: 18px;
-    padding: 40px;
-    padding-left: 2px;
+    margin: 40px 40px 40px 2px;
 }
 
 li:hover {
@@ -89,16 +72,16 @@ img:hover {
 }
 
 .top-bar {
-  background-color: #333;
-  display: grid;
-  align-items:baseline;
+    background-color: #333;
+    display: grid;
+    align-items:baseline;
 }
 
 .center {
     padding-left: 25px; 
 }
 
-.mid-section {
+.grid-section {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(32vw, 160px);
@@ -111,22 +94,22 @@ img:hover {
     box-shadow: 0 -6px 0 #fff, 0 1px 6px rgba(0,0,0, .35);
 }
 
-.grid-item:hover {
-    cursor: pointer;
-}
-
-.playlists, 
-.personal-videos {
+.food-goods, 
+.survival-stories {
     color: gray;
 }
 
-.playlists-img, 
-.user-img {
+.food-goods-img, 
+.survival-stories-img {
     filter: invert(57%) sepia(67%) saturate(869%) hue-rotate(172deg) brightness(82%) contrast(96%);
+    height: 20px;
+    width: 20px;
 }
 
-.shares-img {
+.swimming-things-img {
     filter: invert(100%);
+    height: 20px;
+    width: 20px;
 }
 
 .water-img {
@@ -142,10 +125,6 @@ img:hover {
     object-fit: cover;
 }
 
-/* .image-views-number {
-    margin-top: 0;
-} */
-
 .date {
     margin: 0;
     margin-left: 20px;
@@ -155,12 +134,16 @@ img:hover {
 .link1,
 .link2 {
     object-fit: cover;
-    margin: 20px 0 0 30px;
+    margin: 20px 0 0 24px;
     padding: 10px;
     width: 80%;
     color:rgba(0,0,0, .35);
     background-color: rgba(206, 206, 206, 0.6); 
-    word-wrap: break-word;
+}
+
+.link1,
+.link2:hover {
+    cursor: pointer;
 }
 
 .link1 {
@@ -179,8 +162,7 @@ img:hover {
 }
 
 .box-name-of-playlist {
-    margin-left: 20px;
-    margin-top: 0;
+    margin: 0 0 0 20px;
     color:rgba(0,0,0, .55);
     font-size: 20px;
 }
@@ -192,10 +174,16 @@ img:hover {
 }
 
 .box-number {
-    margin-left: 20px;
-    margin-top: 0;
+    margin: 0 0 0 20px;
     color: rgb(46, 149, 209, .8);
     font-size: 40px;
-    font-weight: lighter;
 }
 
+.box-number:hover {
+    cursor: pointer;
+}
+
+.admin-user {
+    height: 20px;
+    width: 20px;
+}
